refactor: isolate article commands and views from persistence entities